URBNG-70 Updated multi-steps form (wizard) behavior to prevent switching to any step if form is not valid. Added save and publish buttons visible only when certain conditions are met.

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -18,6 +18,6 @@
 
 .wizard {
 	div {
-		min-height: @wizminheight;
+		height: @wizminheight;
 	}
 }
